--- a/public/index.html
+++ b/public/index.html
@@ -10,43 +10,63 @@
 <body>
     <div class='menu-container'>
         <div class='menu'>
-          <div class='date'>Aug 1, 2021</div>
-          <!-- <div class="links"> -->
-              <div class='signup'>Sign Up</div>
-              <div class='login'>Login</div>
-          <!-- </div> -->
+            <div class='date'>Aug 2, 2021</div>
+            <div class='signup'>Sign Up</div>
+            <div class='login'>Login</div>
         </div>
     </div>
+
     <div class='header-container'>
         <div class='header'>
-          <div class='subscribe'>Subscribe &#9662;</div>
-          <div class='logo'><img src='images/awesome-logo.svg'/></div>
-          <div class='social'><img src='images/social-icons.svg'/></div>
+            <h1 class='title'>Dang's To Do List</h1>
         </div>
     </div>
-    <div class='photo-grid-container'>
-        <div class='photo-grid'>
-          <div class='photo-grid-item first-item'>
-            <img src='images/one.svg'/>
-          </div>
-          <div class='photo-grid-item'>
-            <img src='images/two.svg'/>
-          </div>
-          <div class='photo-grid-item'>
-            <img src='images/three.svg'/>
-          </div>
-          <div class='photo-grid-item'>
-            <img src='images/four.svg'/>
-          </div>
-          <div class='photo-grid-item last-item'>
-            <img src='images/five.svg'/>
-          </div>
+
+    <div class='task-container'>
+        <div class='task-grid'>
+            <ul>
+                <div class='list-item'>
+                    <input type='checkbox' id='task1' name='task1'>
+                    <label for='task1'>First Item</label><br>
+                    <!-- <li class='first-item'>First Item</li> -->
+                    <button class='selectBtn'>Select Button</button>
+                    <button class="deleteBtn">Delete Button</button>
+                </div>
+                <div class='list-item'>
+                    <input type='checkbox' id='task2' name='task2'>
+                    <label for='task2'>Second Item</label><br>
+                    <!-- <li class='second-item'>Second</li> -->
+                    <button class='selectBtn'>Select Button</button>
+                    <button class="deleteBtn">Delete Button</button>
+                </div>
+                <div class='list-item'>
+                    <input type='checkbox' id='task3' name='task3'>
+                    <label for='task3'>Third Item</label><br>
+                    <!-- <li class='third-item'>Third</li> -->
+                    <button class='selectBtn'>Select Button</button>
+                    <button class="deleteBtn">Delete Button</button>
+                </div>
+                <!-- <div class='list-item'>
+                    <input type='checkbox' id='task4'>
+                    <li class='fourth-item'>Fourth</li>
+                    <button class='selectBtn'>Select Button</button>
+                    <button class="deleteBtn">Delete Button</button>
+                </div>
+                <div class='list-item'>
+                    <input type='checkbox' id='task5'>
+                    <li class='fifth-item'>Fifth</li>
+                    <button class='selectBtn'>Select Button</button>
+                    <button class="deleteBtn">Delete Button</button>
+                </div> -->
+            </ul>
         </div>
     </div>
-    <div class='footer'>
-  <div class='footer-item footer-one'></div>
-  <div class='footer-item footer-two'></div>
-  <div class='footer-item footer-three'></div>
-</div>
+
+    <!-- <div class='footer'>
+        <div class='footer-item footer-one'></div>
+        <div class='footer-item footer-two'></div>
+        <div class='footer-item footer-three'></div>
+    </div> -->
+
 </body>
 </html>
