--- a/public/index.html
+++ b/public/index.html
@@ -17,47 +17,46 @@
     </div>
 
     <div class='header-container'>
-        <div class='header'>
-            <h1 class='title'>Dang's To Do List</h1>
+        <div class="title-wrapper">
+            <h1 class='title-name'>To Do List</h1>
+        </div>
+        <div class='form'>
+            <input type='text' id='task-name' placeholder="Add To-Dos Here..." required autocomplete="off"/>
+            <button id='add-task-btn'>+</button>
         </div>
     </div>
 
     <div class='task-container'>
-        <div class='task-grid'>
-            <ul>
-                <div class='list-item'>
-                    <input type='checkbox' id='task1' name='task1'>
-                    <label for='task1'>First Item</label><br>
-                    <!-- <li class='first-item'>First Item</li> -->
-                    <button class='selectBtn'>Select Button</button>
-                    <button class="deleteBtn">Delete Button</button>
+        <div class='task'>
+            <ul class='task-list'>
+
+                <div>
+                    <li class='list-item'>
+                        <input type='checkbox' class='md-task'/>
+                        First item here
+                    </li>
+                    <!-- <button class='selectBtn'>Select Button</button>
+                    <button class="deleteBtn">Delete Button</button> -->
                 </div>
-                <div class='list-item'>
-                    <input type='checkbox' id='task2' name='task2'>
-                    <label for='task2'>Second Item</label><br>
-                    <!-- <li class='second-item'>Second</li> -->
-                    <button class='selectBtn'>Select Button</button>
-                    <button class="deleteBtn">Delete Button</button>
+
+                <div>
+                    <li class='list-item'>
+                        <input type='checkbox' class='md-task'/>
+                        Second item here
+                    </li>
+                    <!-- <button class='selectBtn'>Select Button</button>
+                    <button class="deleteBtn">Delete Button</button> -->
                 </div>
-                <div class='list-item'>
-                    <input type='checkbox' id='task3' name='task3'>
-                    <label for='task3'>Third Item</label><br>
-                    <!-- <li class='third-item'>Third</li> -->
-                    <button class='selectBtn'>Select Button</button>
-                    <button class="deleteBtn">Delete Button</button>
+
+                <div>
+                    <li class='list-item'>
+                        <input type='checkbox' class='md-task'/>
+                        Third item here
+                    </li>
+                    <!-- <button class='selectBtn'>Select Button</button>
+                    <button class="deleteBtn">Delete Button</button> -->
                 </div>
-                <!-- <div class='list-item'>
-                    <input type='checkbox' id='task4'>
-                    <li class='fourth-item'>Fourth</li>
-                    <button class='selectBtn'>Select Button</button>
-                    <button class="deleteBtn">Delete Button</button>
-                </div>
-                <div class='list-item'>
-                    <input type='checkbox' id='task5'>
-                    <li class='fifth-item'>Fifth</li>
-                    <button class='selectBtn'>Select Button</button>
-                    <button class="deleteBtn">Delete Button</button>
-                </div> -->
+                
             </ul>
         </div>
     </div>
@@ -68,5 +67,6 @@
         <div class='footer-item footer-three'></div>
     </div> -->
 
+    <script defer src='app.js'></script>
 </body>
 </html>
