update features FE

--- a/public/index.html
+++ b/public/index.html
@@ -27,46 +27,22 @@
     </div>
 
     <div class='task-container'>
-        <div class='task'>
-            <ul class='task-list'>
-
-                <div>
-                    <li class='list-item'>
-                        <input type='checkbox' class='md-task'/>
-                        First item here
-                    </li>
-                    <!-- <button class='selectBtn'>Select Button</button>
-                    <button class="deleteBtn">Delete Button</button> -->
-                </div>
-
-                <div>
-                    <li class='list-item'>
-                        <input type='checkbox' class='md-task'/>
-                        Second item here
-                    </li>
-                    <!-- <button class='selectBtn'>Select Button</button>
-                    <button class="deleteBtn">Delete Button</button> -->
-                </div>
-
-                <div>
-                    <li class='list-item'>
-                        <input type='checkbox' class='md-task'/>
-                        Third item here
-                    </li>
-                    <!-- <button class='selectBtn'>Select Button</button>
-                    <button class="deleteBtn">Delete Button</button> -->
-                </div>
-                
-            </ul>
-        </div>
+        <ul class='task-list'>
+            <!-- <div class='tasks' id='task-1'>
+                <input type='checkbox' class='md-task'/>
+                <li class='list-item'>First item here This is the most important</li>
+                <div class='remove-btn' id='1'>x</div>
+            </div> -->
+        </ul>
     </div>
 
-    <!-- <div class='footer'>
+     <!-- <div class='footer'>
         <div class='footer-item footer-one'></div>
         <div class='footer-item footer-two'></div>
         <div class='footer-item footer-three'></div>
-    </div> -->
+    </div>  -->
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script defer src='app.js'></script>
 </body>
 </html>
