finished FE features

--- a/public/index.html
+++ b/public/index.html
@@ -10,15 +10,13 @@
 <body>
     <div class='menu-container'>
         <div class='menu'>
-            <div class='date'>Aug 2, 2021</div>
-            <div class='signup'>Sign Up</div>
-            <div class='login'>Login</div>
+            <div class='date'></div>
         </div>
     </div>
 
     <div class='header-container'>
         <div class="title-wrapper">
-            <h1 class='title-name'>To Do List</h1>
+            <h1 class='title-name'></h1>
         </div>
         <div class='form'>
             <input type='text' id='task-name' placeholder="Add To-Dos Here..." required autocomplete="off"/>
@@ -36,11 +34,11 @@
         </ul>
     </div>
 
-     <!-- <div class='footer'>
-        <div class='footer-item footer-one'></div>
-        <div class='footer-item footer-two'></div>
-        <div class='footer-item footer-three'></div>
-    </div>  -->
+     <div class='footer'>
+        <div class='footer-item'>
+            <h3>By Thuan Dang</h3>
+        </div>
+    </div> 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script defer src='app.js'></script>
