finished DB CRUD on FE

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
 
     <div class='header-container'>
         <div class="title-wrapper">
-            <h1 class='title-name'></h1>
+            <h1 class='title-name'><p>&#128512;</p></h1>
         </div>
         <div class='form'>
             <input type='text' id='task-name' placeholder="Add To-Dos Here..." required autocomplete="off"/>
@@ -25,6 +25,7 @@
     </div>
 
     <div class='task-container'>
+        <div class='error'></div>
         <ul class='task-list'>
             <!-- <div class='tasks' id='task-1'>
                 <input type='checkbox' class='md-task'/>
@@ -36,7 +37,7 @@
 
      <div class='footer'>
         <div class='footer-item'>
-            <h3>By Thuan Dang</h3>
+            <h3>Made by <strong>Thuan Dang</strong></h3>
         </div>
     </div> 
 
