semi-final product

--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
 
      <div class='footer'>
         <div class='footer-item'>
-            <h3>Made by <strong>Thuan Dang</strong></h3>
+            <h3>Made by Thuan Dang with &#10084;</h3>
         </div>
     </div> 
 
