--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
 
     <div class='header-container'>
         <div class="title-wrapper">
-            <h1 class='title-name'><p>&#128512;</p></h1>
+            <h1 class='title-name'></h1>
         </div>
         <div class='form'>
             <input type='text' id='task-name' placeholder="Add To-Dos Here..." required autocomplete="off"/>
