--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
             <h1 class='title-name'></h1>
         </div>
         <div class='form'>
-            <input type='text' id='task-name' placeholder="Add To-Dos Here..." required autocomplete="off"/>
+            <input type='text' id='task-name' placeholder="Add To-Dos Here..." max-length="100" required autocomplete="off"/>
             <button id='add-task-btn'>+</button>
         </div>
     </div>
